fix: fix title can't be displayed bug

--- a/BarcodeReaderSimpleSample/template_src/www/css/topbar.css
+++ b/BarcodeReaderSimpleSample/template_src/www/css/topbar.css
@@ -26,6 +26,7 @@
     line-height: 50px;
     align-items: center;
     vertical-align: middle;
+    color: black;
 }
 .top-ui li img{
     height: 30px;
